# arpabo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pre-commit.yml  publish.yml  test.yml
docs/: hyperparameter_optimization.md  model_comparison.md  multi_order_training.md  perplexity_evaluation.md  sphinx-lm-binary.md
examples/: hyperparameter_optimization_example.py  model_comparison_example.py
src/arpabo/: __init__.py  arpa_io.py  backoff.py  cli.py  cli_normalize.py  comparison.py  convert.py  crossval.py  data.py  debug.py  interpolation.py  kenlm_bin.py  lm.py  normalize.py  presets.py  utils.py
src/arpabo/data/: README.md  alice.txt
src/arpabo/smoothing/: __init__.py  base.py  good_turing.py  katz_backoff.py  kneser_ney.py  utils.py
src/arpalm/: __init__.py  cli.py  cli_normalize.py  debug.py  lm.py
src/arpalm/data/: README.md  alice.txt
src/arpalm/smoothing/: __init__.py  good_turing.py  katz_backoff.py  kneser_ney.py  utils.py
tests/: README.md  __init__.py  arpa_eval.py  test_arpa_io.py  test_asr_decode.py  test_cli.py  test_cli_main.py  test_cli_normalize.py  test_comparison.py  test_convert.py  test_crossval.py  test_data.py  test_integration.py  test_interpolation.py  test_kenlm_bin.py  test_kneser_ney.py  test_lm.py  test_multiorder.py  test_normalization.py  test_normalize.py  test_optimization.py  test_perplexity.py  test_perplexity_backoff.py  test_presets.py  test_pruning.py  test_smoothing.py  test_smoothing_comparison.py  test_statistics.py  test_uniform.py  test_utils.py
tests/data/: README.md
tests/fixtures/: tiny.arpa
