[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arpalm"
version = "0.1.0"
description = "Build ARPA format statistical language models with multiple smoothing methods"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Kevin Lenzo", email = "lenzo@cs.cmu.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
keywords = ["nlp", "language-model", "arpa", "n-gram", "smoothing", "katz-backoff", "good-turing", "kneser-ney"]

[project.scripts]
arpalm = "arpalm.cli:main"
arpalm-normalize = "arpalm.cli_normalize:main"

[project.urls]
Homepage = "https://github.com/lenzo-ka/arpalm"
Issues = "https://github.com/lenzo-ka/arpalm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arpalm = ["py.typed", "data/*.txt"]

# Ruff configuration (append to pyproject.toml)

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["arpalm"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
